<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MyApplication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".UI_Layer.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000">

        <ImageView
            android:id="@+id/img_Login_Background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/background_image_login" />

        <ImageView
            android:id="@+id/imgLoginLogoPortrait"
            android:layout_width="157dp"
            android:layout_height="149dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_welcome" />

        <EditText
            android:id="@+id/txtEmailPortrait"
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_Enter_Email_Uname"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEmailUNamePortrait" />

        <TextView
            android:id="@+id/lblEmailUNamePortrait"
            android:layout_width="646dp"
            android:layout_height="28dp"
            android:layout_marginTop="22dp"
            android:text="@string/src_Email_Username"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginWelcomePortrait" />

        <ImageView
            android:id="@+id/imgLoginWelcomePortrait"
            android:layout_width="357dp"
            android:layout_height="139dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginLogoPortrait"
            app:srcCompat="@drawable/welcome_merged_textbox" />

        <EditText
            android:id="@+id/txtPasswordPortrait"
            android:layout_width="345dp"
            android:layout_height="40dp"
            android:background="@drawable/login_text_password"
            android:ems="10"
            android:hint="@string/src_Enter_Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblPasswordPortrait" />

        <Button
            android:id="@+id/cmdLoginPortrait"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginTop="23dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_btnLogin"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordPortrait" />

        <TextView
            android:id="@+id/lblPasswordPortrait"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/src_Password"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailPortrait" />

        <EditText
            android:id="@+id/txtPasswordLandscape"
            android:layout_width="654dp"
            android:layout_height="37dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/login_text_password"
            android:ems="10"
            android:hint="@string/src_Enter_Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailLandscape" />

        <TextView
            android:id="@+id/lblForgotPasswordPortrait"
            android:layout_width="191dp"
            android:layout_height="31dp"
            android:layout_marginTop="118dp"
            android:layout_marginBottom="7dp"
            android:text="@string/src_ForgotPwd"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCreateNewUserPortrait" />

        <TextView
            android:id="@+id/lblCreateNewUserPortrait"
            android:layout_width="83dp"
            android:layout_height="28dp"
            android:layout_marginTop="7dp"
            android:text="@string/src_Create_New_User"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cmdLoginPortrait" />

        <ImageView
            android:id="@+id/imgLoginLogoLandscape"
            android:layout_width="193dp"
            android:layout_height="115dp"
            android:layout_marginEnd="541dp"
            android:layout_marginBottom="254dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/login_welcome" />

        <ImageView
            android:id="@+id/imgLoginWelcomeLandscape"
            android:layout_width="476dp"
            android:layout_height="119dp"
            android:layout_marginEnd="112dp"
            android:layout_marginBottom="247dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/welcome_merged_textbox" />

        <EditText
            android:id="@+id/txtEmailLandscape"
            android:layout_width="654dp"
            android:layout_height="37dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_Enter_Email_Uname"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginWelcomeLandscape" />

        <TextView
            android:id="@+id/lblForgotPasswordLandscape"
            android:layout_width="141dp"
            android:layout_height="23dp"
            android:layout_marginStart="430dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="160dp"
            android:text="@string/src_ForgotPwd"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordLandscape"
            app:layout_constraintVertical_bias="0.022" />

        <Button
            android:id="@+id/cmdLoginLandscape"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="143dp"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="392dp"
            android:layout_marginBottom="78dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordLandscape" />

        <TextView
            android:id="@+id/lblCreateNewUserLandscape"
            android:layout_width="86dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:text="@string/src_Create_New_User"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/lblForgotPasswordLandscape"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cmdLoginLandscape"
            app:layout_constraintTop_toBottomOf="@+id/txtPasswordLandscape"
            app:layout_constraintVertical_bias="0.021" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

