<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MyApplication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".UI_Layer.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#40000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/img_Login_Background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_image_login" />

        <ImageView
            android:id="@+id/imgLoginLogoPortrait"
            android:layout_width="224dp"
            android:layout_height="161dp"
            android:layout_marginTop="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/login_welcome" />

        <ImageView
            android:id="@+id/imgLoginLogoLandscape"
            android:layout_width="193dp"
            android:layout_height="85dp"
            app:srcCompat="@drawable/login_welcome"
            tools:layout_editor_absoluteX="13dp"
            tools:layout_editor_absoluteY="8dp" />

        <ImageView
            android:id="@+id/imgLoginWelcomePortrait"
            android:layout_width="352dp"
            android:layout_height="64dp"
            android:layout_marginTop="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginLogoPortrait"
            app:srcCompat="@drawable/welcome_merged_textbox" />

        <ImageView
            android:id="@+id/imgLoginWelcomeLandscape"
            android:layout_width="353dp"
            android:layout_height="62dp"
            android:layout_marginStart="378dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="329dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/welcome_merged_textbox"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/lblResetPasswordPortrait"
            android:layout_width="354dp"
            android:layout_height="35dp"
            android:layout_marginTop="41dp"
            android:text="@string/src_resetpass_label"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLoginWelcomePortrait" />

        <EditText
            android:id="@+id/txtPass1Portrait"
            android:layout_width="352dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_forgot_pass_first_entry"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblResetPasswordPortrait" />

        <TextView
            android:id="@+id/lblResetPasswordLandscape"
            android:layout_width="237dp"
            android:layout_height="33dp"
            android:layout_marginStart="224dp"
            android:layout_marginTop="57dp"
            android:layout_marginEnd="247dp"
            android:layout_marginBottom="304dp"
            android:text="@string/src_resetpass_label"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.176" />

        <EditText
            android:id="@+id/txtPass1Landscape"
            android:layout_width="604dp"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_forgot_pass_first_entry"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblResetPasswordLandscape" />

        <TextView
            android:id="@+id/txtSecurityQuestionLandscape"
            android:layout_width="604dp"
            android:layout_height="35dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/login_text_email"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass2Landscape" />

        <EditText
            android:id="@+id/txtSecAnswerLandscape"
            android:layout_width="603dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_SecAnswer_Hint"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecurityQuestionLandscape" />

        <EditText
            android:id="@+id/txtPass2Landscape"
            android:layout_width="604dp"
            android:layout_height="35dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_forgot_pass_second_entry"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass1Landscape" />

        <EditText
            android:id="@+id/txtPass2Portrait"
            android:layout_width="352dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_forgot_pass_second_entry"
            android:inputType="textPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass1Portrait" />

        <Button
            android:id="@+id/SubmitPasswordResetPortrait"
            android:layout_width="206dp"
            android:layout_height="44dp"
            android:layout_marginTop="17dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_submit_pass_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecAnswerPortrait" />

        <Button
            android:id="@+id/SubmitPasswordResetLandscape"
            android:layout_width="250dp"
            android:layout_height="42dp"
            android:layout_marginStart="75dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="7dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_submit_pass_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/CancelLandscape"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecAnswerLandscape"
            app:layout_constraintVertical_bias="0.308"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/CancelLandscape"
            android:layout_width="251dp"
            android:layout_height="45dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="92dp"
            android:layout_marginBottom="4dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_cancel_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecAnswerLandscape"
            app:layout_constraintVertical_bias="0.264" />

        <Button
            android:id="@+id/CancelPortrait"
            android:layout_width="125dp"
            android:layout_height="37dp"
            android:layout_marginBottom="64dp"
            android:background="@android:drawable/button_onoff_indicator_on"
            android:text="@string/src_cancel_button"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.531"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SubmitPasswordResetPortrait"
            app:layout_constraintVertical_bias="0.361" />

        <TextView
            android:id="@+id/txtSecurityQuestionPortrait"
            android:layout_width="352dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_text_email"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPass2Portrait" />

        <EditText
            android:id="@+id/txtSecAnswerPortrait"
            android:layout_width="352dp"
            android:layout_height="35dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/login_text_email"
            android:ems="10"
            android:hint="@string/src_SecAnswer_Hint"
            android:inputType="text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSecurityQuestionPortrait" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>